Your commit message

--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
         <section class="section" style="margin-top: 80px;">
             <h2>About Me</h2>
             <div style="max-width: 800px; margin: 0 auto; text-align: center;">
-                <div style="width: 300px; height: 300px; border-radius: 50%; background-image: url('https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80'); background-size: cover; background-position: center; margin: 0 auto 2rem; box-shadow: 0 10px 30px rgba(0,0,0,0.2);"></div>
+                <div style="width: 300px; height: 300px; border-radius: 50%; background-image: url('https://images.unsplash.com/photo-1506748686214-e9df14d4d9d0?ixlib=rb-4.0.3&auto=format&fit=crop&w=2070&q=80'); background-size: cover; background-position: center; margin: 0 auto 2rem; box-shadow: 0 10px 30px rgba(0,0,0,0.2);"></div>
                 <p style="font-size: 1.2rem; line-height: 1.8; color: #666; margin-bottom: 2rem;">
                     I'm a passionate photographer dedicated to capturing the beauty and emotion in every moment. With over 10 years of experience, I specialize in creating timeless images that tell your unique story.
                 </p>
