--- a/index.html
+++ b/index.html
@@ -47,10 +47,18 @@
             box-shadow: 0 2px 20px rgba(0,0,0,0.1);
         }
 
+        .nav-container {
+            max-width: 1200px;
+            margin: 0 auto;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 0 2rem;
+        }
+
         nav ul {
             list-style: none;
             display: flex;
-            justify-content: center;
             gap: 2rem;
         }
 
@@ -63,6 +71,88 @@
 
         nav a:hover {
             color: #8B4513;
+        }
+
+        .search-container {
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+        }
+
+        .search-box {
+            position: relative;
+        }
+
+        .search-input {
+            padding: 0.5rem 1rem;
+            border: 2px solid #ddd;
+            border-radius: 25px;
+            outline: none;
+            font-size: 0.9rem;
+            width: 200px;
+            transition: all 0.3s ease;
+        }
+
+        .search-input:focus {
+            border-color: #8B4513;
+            width: 250px;
+        }
+
+        .search-btn {
+            background: #8B4513;
+            color: white;
+            border: none;
+            padding: 0.5rem 1rem;
+            border-radius: 25px;
+            cursor: pointer;
+            font-weight: 500;
+            transition: all 0.3s ease;
+        }
+
+        .search-btn:hover {
+            background: #A0522D;
+            transform: translateY(-1px);
+        }
+
+        .search-results {
+            position: absolute;
+            top: 100%;
+            left: 0;
+            right: 0;
+            background: white;
+            border: 1px solid #ddd;
+            border-radius: 10px;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.1);
+            max-height: 300px;
+            overflow-y: auto;
+            z-index: 1001;
+            display: none;
+        }
+
+        .search-result-item {
+            padding: 1rem;
+            border-bottom: 1px solid #eee;
+            cursor: pointer;
+            transition: background 0.3s ease;
+        }
+
+        .search-result-item:hover {
+            background: #f8f8f8;
+        }
+
+        .search-result-item:last-child {
+            border-bottom: none;
+        }
+
+        .search-result-title {
+            font-weight: 600;
+            color: #8B4513;
+            margin-bottom: 0.25rem;
+        }
+
+        .search-result-description {
+            font-size: 0.9rem;
+            color: #666;
         }
 
         .hero {
@@ -373,6 +463,20 @@
         }
 
         @media (max-width: 768px) {
+            .nav-container {
+                flex-direction: column;
+                gap: 1rem;
+                padding: 1rem;
+            }
+
+            .search-input {
+                width: 150px;
+            }
+
+            .search-input:focus {
+                width: 200px;
+            }
+
             .hero-content h1 {
                 font-size: 2.5rem;
             }
@@ -398,13 +502,22 @@
 </head>
 <body>
     <nav>
-        <ul>
-            <li><a href="#" onclick="showPage('home')">Home</a></li>
-            <li><a href="#" onclick="showPage('about')">About</a></li>
-            <li><a href="#" onclick="showPage('services')">Services</a></li>
-            <li><a href="#" onclick="showPage('gallery')">Gallery</a></li>
-            <li><a href="#" onclick="showPage('contact')">Contact</a></li>
-        </ul>
+        <div class="nav-container">
+            <ul>
+                <li><a href="#" onclick="showPage('home')">Home</a></li>
+                <li><a href="#" onclick="showPage('about')">About</a></li>
+                <li><a href="#" onclick="showPage('services')">Services</a></li>
+                <li><a href="#" onclick="showPage('gallery')">Gallery</a></li>
+                <li><a href="#" onclick="showPage('contact')">Contact</a></li>
+            </ul>
+            <div class="search-container">
+                <div class="search-box">
+                    <input type="text" class="search-input" placeholder="Search..." id="searchInput">
+                    <div class="search-results" id="searchResults"></div>
+                </div>
+                <button class="search-btn" onclick="performSearch()">🔍</button>
+            </div>
+        </div>
     </nav>
 
     <!-- Home Page -->
@@ -582,6 +695,7 @@
         </footer>
     </div>
 
+    
     <!-- Gallery Page -->
     <div id="gallery" class="page">
         <section class="section" style="margin-top: 80px;">
@@ -796,3 +910,4 @@ Website: www.beautifulphotography.com
     </script>
 </body>
 </html>
+
